took out unneeded plugins since we're using Spring now